--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
 <body>
 
 <h1>This is a headings123</h1>
-<p>This is a paragraph.</p>
+<p>This is paragraphs</p>
+<p>This is photos</p>
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
 
 </body>
 </html>
